@@ -1,3 +1,6 @@
+March 2013
+- TimePickerDialogFragment
+
 January 2013
 - BackLoadingAdapter inheritors now can use custom load indicator
 
